# sipoxide

./: .gitignore  Cargo.toml  lilscript.sh
misc/: join.jl  utils.jl
src/: MLB.rs  bov.rs  lines.rs  main.rs  misc.rs  mlb_schedule.rs  scores.rs  utils.rs
